--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,9 @@
 <ul>
   <% @movies.each do |movie| %>
     <li>
-      <strong><%= movie.title %></strong> (<%= movie.rating %>): <%= number_to_currency(movie.total_gross, precision: 0) %>
+      <strong><%= movie.title %></strong> (<%= movie.rating %>): <%= total_gross(movie) %>
     </li>
+    <p><%= truncate(movie.description, length: 40, separator: ' ' ) %></p>
+    <p><%= year_of(movie) %></p>
   <% end %>
 </ul>
