--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,9 +1,13 @@
-<ul>
   <% @movies.each do |movie| %>
-    <li>
-      <strong><%= movie.title %></strong> (<%= movie.rating %>): <%= total_gross(movie) %>
-    </li>
-    <p><%= truncate(movie.description, length: 40, separator: ' ' ) %></p>
-    <p><%= year_of(movie) %></p>
-  <% end %>
-</ul>
+  <section class="movie">
+    <div class="summary">
+      <h2>
+        <%= movie.title %>
+      </h2>
+      <h3>
+        <%= total_gross(movie) %>
+      </h3>
+      <p><%= truncate(movie.description, length: 40, separator: ' ' ) %></p>
+    </div>
+  </section>
+<% end %>
