--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,26 +11,13 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <%= link_to image_tag("logo.png"), root_path %>
-        <ul>
-          <li>
-            <%= link_to("All Movies", movies_path)  %>
-          </li>
-        </ul>
-      </nav>
-    </header>
+
+    <%= render "layouts/header" %>
 
     <div class="content">
       <%= yield %>
     </div>
 
-    <footer>
-      <p>
-        Copyright &copy; <%= Time.now.year %>
-        <%= link_to "The Coding Factory", "https://github.com/rpf13" %>
-      </p>
-    </footer>
+    <%= render "layouts/footer" %>
   </body>
 </html>
