--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,11 @@
           <%= link_to current_user.name, current_user %>
         </li>
         <li>
-          <%= link_to "Account Settings", edit_user_path(current_user) %>
+          <%= link_to "Account Settings", edit_user_path(current_user)%>
+        </li>
+        <li>
+          <%=  link_to "Sign Out", session_path, data: { turbo_method: :delete}, class: "button"  %>
+          <%# alternative is to make a button out of it, instead of the link %>
         </li>
       <% else %>
         <li>
