--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,12 @@
   <p>
     <%= @user.created_at.strftime("%d %B %Y") %>
   </p>
-  <div class="actions">
-    <%= link_to "Edit Account", edit_user_path(@user),
+  <% if current_user?(@user) %>
+    <div class="actions">
+      <%= link_to "Edit Account", edit_user_path(@user),
                   class: "button edit" %>
-    <%= link_to 'Delete Account', @user, class: "button delete",
+      <%= link_to 'Delete Account', @user, class: "button delete",
           data: { turbo_method: :delete, turbo_confirm: "Permanently delete your account!?" } %>
-  </div>
+    </div>
+  <% end %>
 </section>
