--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,6 +18,8 @@
   </section>
 <% end %>
 
-<section class="admin">
-  <%= link_to "Add new Movie", new_movie_path, class: "button"  %>
-</section>
+<% if current_user_admin? %>
+  <section class="admin">
+    <%= link_to "Add new Movie", new_movie_path, class: "button"  %>
+  </section>
+<% end %>
