--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,4 +14,25 @@
           data: { turbo_method: :delete, turbo_confirm: "Permanently delete your account!?" } %>
     </div>
   <% end %>
+
+  <% if @reviews.present? %>
+    <h3>Reviews</h3>
+    <% @reviews.each do |review| %>
+      <div class="review">
+        <div class="details">
+          <%= profile_image(review.user, 35) %>
+          <span class="title">
+            <%= link_to review.movie.title, review.movie %>
+          </span>
+          <%= pluralize(review.stars, 'star') %>
+          <span class="date">
+            <%= time_ago_in_words(review.created_at) %> ago
+          </span>
+          <p>
+            <%= review.comment %>
+          </p>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
 </section>
