--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -30,6 +30,19 @@
     </table>
     <%= link_to "Write Review", new_movie_review_path(@movie), class: "review" %>
   </div>
+  <aside>
+    <% if @fans.present? %>
+      <h4>Fans</h4>
+      <ul>
+        <% @fans.each do |user| %>
+          <li>
+            <%= profile_image(user, 35) %>
+            <%= link_to user.name, user %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  </aside>
 </section>
 
 <% if current_user_admin? %>
